--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -27,20 +27,20 @@ For pseudo-reactions, appropriate notes are included to describe the collapse. D
   (a) For reactions for which at least one input and at least one output component contain a measured value from the user data, the reaction will be maintained as is. (b) When an input of a reaction is known, but no output has a known value, Metaboverse will search for all neighboring reactions that contain identical inputs. If the neighboring reaction has a known output value, the two reactions will be merged into one pseudo-reaction. (c) When an output of a reaction is known, but no input has a known value, Metaboverse will search for all neighboring reactions that contain identical outputs. If the neighboring reaction has a known input value, the two reactions will be merged into one pseudo-reaction. (d) For reactions with no known values, neighbor pairs that match the inputs and outputs of the considered reaction will be evaluated for whether their respective outputs and inputs both have known values. If values are known for both neighbors, the three reactions will be merged into one pseudo-reaction. (e) As in (d), but if one neighbor does not contain a value and the other does contain a value, no reaction merging will be performed. (f) As in (d), but if neither neighbors contain known values, no reaction merging will be performed. An asterisk (*) indicates the target reaction being considered for a given reaction collapse. A red node indicates a reaction input or output with a measured value. A white node indicates a reaction input or output with no measured value. A gray node indicates a reaction. A gray node with a dashed border indicates a pseudo-reaction. A solid edge indicates a known relationship. A dashed edge indicates a relationship inferred via reaction merging.
 ](./content/figures/collapse_schematic.png "Tall image"){#fig:collapse_schematic height=6in}
 
-### 4. Regulatory pattern (motif) searches and sorting
-Metaboverse provides a variety of different regulatory patterns (motifs) for the user to explore. To identify a motif is to compare some value that is computed from a reaction or a pathway with a user-specified threshold.
+### 4. Regulatory pattern searches and sorting
+Metaboverse provides a variety of different regulatory patterns for the user to explore. To identify a reaction pattern is to compare some value that is computed from a reaction or a pathway with a user-specified threshold.
 
-The identified motifs will be listed in a stamp view. Each stamp represents a motif, with a glyph of the reaction, or the name of the pathway on it. In this stamp view, the identified motifs can be sorted according to three criteria: the number of pathways containing the motif (not applicable for pathway motifs), the magnitude change of the computed value, and the statistical significance. When sorting by the number of pathways or the magnitude change, the motifs are arranged in order from the largest to the smallest. When sorting by the statistical significance, motifs with statistical significance on both the input side (substrates) and the output side (products) are listed first by the product of their maximum statistics, followed by the motifs with statistical significance on one of the two sides, and finally the motifs with no statistical significance on both sides. Within each tier, the motifs are sorted from lowest to highest p-values. For all values or statistics used in sorting, only those that determined the motif are used.
+The identified reaction patterns will be listed in a stamp view. Each stamp represents a reaction, with a glyph of the reaction, or the name of the pathway on it. In this stamp view, the identified patterns can be sorted according to three criteria: the number of pathways containing the reaction (not applicable for pathway pattern identification), the magnitude change of the computed value, and the statistical significance. When sorting by the number of pathways or the magnitude change, the identified reactions are arranged in order from the largest to the smallest. When sorting by the statistical significance, reactions with statistical significance on both the input side (substrates) and the output side (products) are listed first by the product of their maximum statistics, followed by the reactions with statistical significance on one of the two sides, and finally the reactions with no statistical significance on both sides. Within each tier, the reactions are sorted from lowest to highest p-values. For all values or statistics used in sorting, only those that determined the reaction pattern are used.
 
-When the stamp view demonstrates draws reaction motifs, all the pathways containing the corresponding motif will be listed below the stamp view by clicking on the appropriate stamp. For pathway motifs, clicking on a pathway ID will draw the selected pathway as a network, with all the motifs in this pathway highlighted.
+When the stamp view demonstrates draws reaction patterns, all the pathways containing the corresponding reactions will be listed below the stamp view by clicking on the appropriate stamp. For pathway patterns, clicking on a pathway ID will draw the selected pathway as a network, with all the potential regulatory reaction patterns in this pathway highlighted.
 
 ### 5. Nearest neighborhood searches and prioritization
-To visualize all global connections, a user can select an entity (a gene, protein, or metabolite) and visualize all reactions in which the component is involved. By doing so, the user can visualize other downstream effects a change of one entity might have across the global network, which consequently aids in bridging and identifying any motifs that may occur between canonically annotated pathways. These neighborhoods can be expanded to view multiple downstream reaction steps and their accompanying genes, proteins, and metabolites by modulating the appropriate user option in the app.
+To visualize all global connections, a user can select an entity (a gene, protein, or metabolite) and visualize all reactions in which the component is involved. By doing so, the user can visualize other downstream effects a change of one entity might have across the global network, which consequently aids in bridging and identifying any reaction that may occur between canonically annotated pathways. These neighborhoods can be expanded to view multiple downstream reaction steps and their accompanying genes, proteins, and metabolites by modulating the appropriate user option in the app.
 
 The user can also limit which entities are shown by enforcing a degree threshold. By setting this value at 50, for example, the network would not show nodes that have 50 or more connections. One caveat, however, is that this collapsing scheme will occasionally break synchronous pathways into multiple pieces if one of these high-degree nodes were the bridge between two sides of a pathway.
 
-### 6. Perturbation connectivity
-Perturbation connectivity networks are generated by searching each reaction in the global network for any reaction where at least one component is significantly perturbed. The user can modify the necessary criteria to base the search on the expression or abundance value or the statistical value and can choose the thresholding value to be used. For the expression thresholding, the provided value is assumed to be the absolute value, so a thresholding value of 3 would include any reactions where at least one component showed a greater than 3 measured change or less than -3 measured change, the value of which is dependent on the data provided by the user thus could represent log<sub>2</sub> fold changes, z-scores, or any other unit appropriate in the biological context.
+### 6. Perturbation networks
+Perturbation networks are generated by searching each reaction in the global network for any reaction where at least one component is significantly perturbed. The user can modify the necessary criteria to base the search on the expression or abundance value or the statistical value and can choose the thresholding value to be used. For the expression thresholding, the provided value is assumed to be the absolute value, so a thresholding value of 3 would include any reactions where at least one component showed a greater than 3 measured change or less than -3 measured change, the value of which is dependent on the data provided by the user thus could represent log<sub>2</sub> fold changes, z-scores, or any other unit appropriate in the biological context.
 
 Once a list of perturbed reactions is collected, the network is constructed, including each of these reactions and their components. Perturbed neighboring reactions that share components are thus connected within the network, and perturbed reactions that are not next to other perturbed reactions are shown as disconnected sub-networks.
 
@@ -156,7 +156,7 @@ Data were accessed from Metabolomics Workbench [@doi:10.21228/M8PG66] and proces
 
 <i>mct1</i>&Delta; and accompanying wild-type transcriptomics timecourse data is deposited at the GEO repository under identifier GSE151606 [@url:https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE151606]. Metabolomics data is deposited at the Metabolomics Workbench repository under project identifier PR000961, study identifier ST001401 [@doi:10.21228/M8GD71].
 
-The curated networks for these data are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1]. Networks were generated by taking the 12-hour transcriptomics and proteomics datasets with their appropriate log<sub>2</sub>(fold change) and statistical values, along with the 0, 15, 30, 60, and 180 minute metabolomics datasets with their respective log<sub>2</sub>(fold change) and statistical values and layering these data on the <i>Saccharomyces cereviseae</i> global reaction network as curated by Metaboverse from the Reactome database. Reaction motifs and global connectivity analyses were performed within the Metaboverse platform.
+The curated networks for these data are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1]. Networks were generated by taking the 12-hour transcriptomics and proteomics datasets with their appropriate log<sub>2</sub>(fold change) and statistical values, along with the 0, 15, 30, 60, and 180 minute metabolomics datasets with their respective log<sub>2</sub>(fold change) and statistical values and layering these data on the <i>Saccharomyces cereviseae</i> global reaction network as curated by Metaboverse from the Reactome database. Reaction patterns and perturbation network analyses were performed within the Metaboverse platform.
 
 The Metaboverse source code is available at https://github.com/Metaboverse/Metaboverse. The latest version of the software can be found at https://github.com/Metaboverse/Metaboverse/releases/latest.
 
