--- a/content/04.discussion.md
+++ b/content/04.discussion.md
@@ -1,11 +1,11 @@
 ## Discussion
 
-In this manuscript, we introduce a new software tool for the analysis and exploration of user data layered on the metabolic reaction network. To improve on tools with similar capabilities, we introduced several new analytical tools and methods to aid the user in the automated identification and discovery of regulatory patterns within their data. These tools and methods include the automated ability to identify regulatory events across reactions, such as a reaction where an input has a high measured abundance and an output has a low measured abundance. Metaboverse also provides dynamic and interactive visualization capabilities to search for patterns and features within the user data manually within classical pathway representations. If a user is interested in how a reaction motif is propagating across the reaction network and not just a single pathway, they can explore an entity's nearest reaction neighborhood. The user can also explore the connectedness of perturbations across the network and begin to explore hypotheses around the role of connected or disconnected reactions within a particular biological model.
+In this manuscript, we introduce a new software tool for the analysis and exploration of user data layered on the metabolic reaction network. To improve on tools with similar capabilities, we introduced several new analytical tools and methods to aid the user in the automated identification and discovery of regulatory patterns within their data. These tools and methods include the automated ability to identify regulatory events across reactions, such as a reaction where an input has a high measured abundance and an output has a low measured abundance. Metaboverse also provides dynamic and interactive visualization capabilities to search for patterns and features within the user data manually within classical pathway representations. If a user is interested in how a reaction pattern is propagating across the reaction network and not just a single pathway, they can explore an entity's nearest reaction neighborhood. The user can also explore the connectedness of perturbations across the network and begin to explore hypotheses around the role of connected or disconnected reactions within a particular biological model.
 
-To address the challenge of data sparsity, particularly regarding metabolomics data and the metabolic reaction network, we introduce a reaction collapsing feature. This feature summarizes a series of connected reactions in which values may be missing between the reactions, but where the terminal ends of the reaction path have measured values. Importantly, this ability to collapse reactions augments the capabilities available within Metaboverse, especially in identifying disease-relevant reaction motifs that may be of interest to the user but are otherwise hidden.  
+To address the challenge of data sparsity, particularly regarding metabolomics data and the metabolic reaction network, we introduce a reaction collapsing feature. This feature summarizes a series of connected reactions in which values may be missing between the reactions, but where the terminal ends of the reaction path have measured values. Importantly, this ability to collapse reactions augments the capabilities available within Metaboverse, especially in identifying disease-relevant reaction patterns that may be of interest to the user but are otherwise hidden.  
 
-We demonstrated the utility of Metaboverse in exploring single- and multi-omic datasets. We analyzed previously published studies and generated novel analyses highlighting the timecourse and multi-omic capabilities of this tool. We demonstrated that Metaboverse was able to identify regulatory motifs that were expected in the models based on the current literature and identify intriguing patterns that led us to form new hypotheses. We expect these features to be a powerful tool in researchers' toolkits as they analyze their data and plan their next experimental steps. We plan to continue to implement additional features that will expand the applicability of Metaboverse. For example, we will integrate additional standard data quality control features for each data type and add additional data pre-processing modules. We will include the ability to visualize and analyze flux metabolomics data and add other more targeted analysis approaches to aid the user in following up on motif reaction search results. We will also design an interactive tool to allow users to design a motif.
+We demonstrated the utility of Metaboverse in exploring single- and multi-omic datasets. We analyzed previously published studies and generated novel analyses highlighting the timecourse and multi-omic capabilities of this tool. We demonstrated that Metaboverse was able to identify regulatory patterns that were expected in the models based on the current literature and identify intriguing patterns that led us to form new hypotheses. We expect these features to be a powerful tool in researchers' toolkits as they analyze their data and plan their next experimental steps. We plan to continue to implement additional features that will expand the applicability of Metaboverse, and have already added several features requested by users since Metaboverse was first released.
 
-Metaboverse aims to enhance the computational toolkit for data analysis and hypothesis generation in metabolic and other experiments. However, numerous challenges remain, which we intend to address in future versions of this software. For example, the reaction collapsing features of Metaboverse aid in identifying patterns across several reactions where data may be missing, but various biological and technical edge cases will need to be accounted for in future implementations of this feature. As more technical limitations in metabolomics data generation and analysis are overcome, we hope that more complete snapshots of metabolism will be visible. Additionally, we currently take a more straightforward and somewhat rudimentary approach to statistical significance integration in the reaction motif searches. However, more holistic platforms for cross-omics integration are needed and remain a significant challenge across multi-omics research.
+Metaboverse aims to enhance the computational toolkit for data analysis and hypothesis generation in metabolic and other experiments. However, numerous challenges remain, which we intend to address in future versions of this software. For example, the reaction collapsing features of Metaboverse aid in identifying patterns across several reactions where data may be missing, but various biological and technical edge cases will need to be accounted for in future implementations of this feature. As more technical limitations in metabolomics data generation and analysis are overcome, we hope that more complete snapshots of metabolism will be visible. Additionally, we currently take a more straightforward and somewhat rudimentary approach to statistical significance integration in the reaction pattern searches. However, more holistic platforms for cross-omics integration are needed and remain a significant challenge across multi-omics research.
 
 In summary, we hope that Metaboverse will bring a new perspective to users' data. We envision Metaboverse will become a staple in the metabolic research toolkit that will help researchers critically and holistically consider their data in the context of biological network interactions and draw the connections needed to extract new and exciting hypotheses that might be challenging without these features.
