--- a/content/03.results.md
+++ b/content/03.results.md
@@ -32,7 +32,7 @@ The user may be interested in a particular metabolite or protein and the downstr
 At times, it may be useful to a user to explore all perturbed reactions in a network. Metaboverse will display the total perturbation network for a given super-pathway selected by the user, where then the user is able to look across all pathways within fatty acid metabolism, for example, and identify any interesting features. During perturbation network display, all reactions are included and plotted if at least one component of that reaction passes the indicated magnitude or statistical threshold. Naturally, sequentially perturbed reactions will be stitched together in the resulting perturbation network.
 
 ### Data vignettes
-To demonstrate the utility of Metaboverse, we analyzed both public and new metabolically-relevant datasets. From the vignettes provided below, we show that Metaboverse identifies points of interest previously described or expected and rapidly identifies unexpected and systematic regulatory patterns in a reaction network context. For an example of the reaction collapse algorithm's utility, we refer the reader to the associated supplement (Supplementary Figure @fig:supp_fig_collapse).
+To demonstrate the utility of Metaboverse, we analyzed both public and new metabolically-relevant datasets. From the vignettes provided below, we show that Metaboverse identifies points of interest previously described or expected and rapidly identifies unexpected and systematic regulatory patterns in a reaction network context. For an example of the reaction collapse algorithm's utility, we refer the reader to the associated supplement (Supplementary Figure @fig:supp_fig_collapse). Data from Vignette 1 is available in distributed versions of Metaboverse (as `test_data.zip`) to act as an example for users to familiarize themselves with the input data format.
 
 #### Vignette 1: Perturbation of mitochondrial fatty acid synthesis across time
 Mitochondrial fatty acid synthesis (mtFAS), an evolutionarily conserved pathway, has long been recognized to produce lipoic acid, a critical cofactor for several metabolic enzymes. Recent work has begun to uncover additional, important roles for this pathway. For example, we now know that mtFAS coordinates fatty acid synthesis with iron-sulfur (Fe-S) cluster biogenesis and assembly of oxidative phosphorylation complexes [@doi:10.1016/j.cub.2018.08.022; @doi:10.1016/j.molcel.2018.06.039; @doi:10.7554/eLife.17828]. Additionally, this pathway has received increased physiological focus with the discovery of patients with mutations in key mtFAS enzymes [@doi:10.1016/j.ajhg.2016.09.021].
