--- a/content/100.supplement.md
+++ b/content/100.supplement.md
@@ -1,9 +1,9 @@
 ## Supplementary Material {.page_break_before}
 
-### Reaction collapsing reveals multi-reaction motifs
-Steady-state metabolomics processed data were obtained as measured and published in [@doi:10.7554/eLife.44235]. This study compared the metabolic environments of pancreatic ductal adenocarcinoma tumor interstitial fluid and plasma. log<sub>2</sub>(fold change) values were calculated by comparing the tumor interstitial fluid to the plasma. Adjusted p-values were calculated using the student's T-test and Benjamini-Hochberg correction. Metaboverse motif searches identified a motif across the deamination reaction converting L-serine to pyruvate, as well as the alternative pathway, which involved an intermediate conversion of L-serine to D-serine before the conversion to pyruvate (Figure @fig:supp_fig_collapse). Conventional methods might have missed such a reaction without summarizing intermediate steps where the intermediate metabolite(s) are not measured.
+### Reaction collapsing reveals multi-reaction putative regulatory patterns
+Yeast timecourse metabolomics processed data were obtained as measured and discussed in this study in Vignette 1. Metaboverse reaction pattern searches identified a pattern across the two step transformation of glutathione and methylglyoxal into lactate at 60 minutes after carbon source shift. As the intermediate metabolite was not measured in the dataset, but the inputs to the first reaction and the outputs to the second reaction were measured, Metaboverse collapsed the two reactions into one, thus enabling pattern recognition across two reactions (Figure @fig:supp_fig_collapse). Conventional methods might have missed such a reaction without summarizing intermediate steps where the intermediate metabolite(s) are not measured. This transformation is particularly important in this model as lactate is closely tied with TCA metabolism and may provide explanatory mechanisms for the changes in TCA metabolism observed in this model.
 
 ![
-  **Reaction collapsing reveals motifs across multi-reaction serine biosynthesis steps in the murine tumor microenvironment.**
-  Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation, and an increasingly red shade indicates up-regulation. Measured log<sub>2</sub>(fold change) and statistical values for each entity are displayed below the node name. A gray node indicates a reaction. A bold gray node with a purple border indicates a motif was found at this reaction for the given data type time points. A dashed purple border indicates a motif was discovered across collapsed reactions. Non-reaction circles indicate metabolites and squares indicate proteins or protein complexes. Gray edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst. Dashed blue edges point from a metabolite component to the complex it is involved in. Dashed orange edges point from a protein component to the complex it is involved in. The background shading indicates different cellular compartments for each color.
+  **Reaction collapsing reveals putative regulatory patterns across TCA metabolism-proximal reactions in mtFAS-deficient yeast.**
+  (Left) Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation, and an increasingly red shade indicates up-regulation. Measured log<sub>2</sub>(fold change) and statistical values for each entity are displayed below the node name. A gray node indicates a reaction. A bold gray node with a purple border indicates a pattern was found at this reaction for the given data type time points. A dashed purple border indicates a pattern was discovered across collapsed reactions. Circles indicate metabolites, squares indicate protein complexes, diamonds indicate proteins, and triangles indicate genes. Gray edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst. Dashed blue edges point from a metabolite component to the complex it is involved in. Dashed orange edges point from a protein component to the complex it is involved in. The background shading indicates different cellular compartments for each color. The displayed values are for the 60 minute timepoint. (Right) A screenshot from the Reactome (v73; https://reactome.org/PathwayBrowser/#/R-HSA-1428517&PATH=R-HSA-1430728) pathway explorer of this two-step reaction set.
 ](./content/figures/supp_fig_collapse.png "Square image"){#fig:supp_fig_collapse}
