--- a/content/03.results.md
+++ b/content/03.results.md
@@ -55,11 +55,11 @@ By analyzing this multi-omics dataset using reaction pattern analysis and other 
 #### Vignette 2: Metabolic signatures in malignant human lung adenocarcinomas compared to nonmalignant lung tissue
 We next turned to published human lung adenocarcinoma steady-state metabolomics data [@doi:10.1158/1940-6207.CAPR-14-0329] to assess the utility of Metaboverse when analyzing data. Lung cancer remains a leading cause of death worldwide, and an improved understanding of these tumors' metabolism is essential in understanding how to treat the disease better.
 
-Consistent with the original study [@doi:10.1158/1940-6207.CAPR-14-0329] and our recent re-analysis of the data [@doi:10.1093/gigascience/giz137], nucleotide metabolism was broadly up-regulated in adenocarcinomas based on the reaction pattern and perturbation network analyses (Figure @fig:lung_vignette A). We also notice similar perturbations in xanthine (log<sub>2</sub>(fold change): 1.35; adjusted p-value: 1.52E-05; Cohen's <i>d</i>: 0.86) (Figure @fig:lung_vignette B) and other metabolites, which are highlighted to the user quickly in the reaction pattern and perturbation network analyses. However, as previously emphasized [@doi:10.1093/gigascience/giz137], by approaching these perturbations in a reaction-centric approach, we can identify regulatory behavior that further contextualizes the data. For example, using a more manual approach, we previously highlighted the up-regulation of glyceric acid (log<sub>2</sub>(fold change): 0.50; adjusted p-value: 1.91E-04; Cohen's <i>d</i>: 0.73) coupled with the proximal down-regulation of 3-Phosphoglyceric acid (log<sub>2</sub>(fold change): -1.09; adjusted p-value: 4.74E-04; Cohen's <i>d</i>: -0.68) which could indicate the activity of glycerate kinase [@doi:10.1093/gigascience/giz137]. This connection was missed in the original study but was highlighted by Metaboverse's reaction pattern analysis module. This sub-pathway activity is consequential as it has connections to serine metabolism that contributes to generating an ideal environment for tumorigenesis (Figure @fig:lung_vignette C). Interestingly, of the measured and significant metabolites involved in the TCA cycle, we see a moderate up-regulation of malate (log<sub>2</sub>(fold change): 0.39, adjusted p-value: 3.85E-03; Cohen's <i>d</i>: 0.56) and down-regulation of citrate (log<sub>2</sub>(fold change): -0.64, adjusted p-value: 1.20E-03; Cohen's <i>d</i>: -0.63). This pattern is consistent with the hypothesis that the TCA cycle is starved of pyruvate-derived carbons and is compensating by shunting carbon into the TCA cycle via glutaminolysis. This compensatory pathway, a feature in many cancers, consists of glutamine transport into mitochondria and its conversion to alpha-ketoglutarate. Alpha-ketoglutarate then enters the second half of the TCA cycle to generate reducing equivalents, ATP, and biosynthetic intermediates [@pmid:429309; @doi:10.1146/annurev-bioeng-071516-044546]. Pyruvate is likely shunted towards the production of lactate and other biosynthetic products (no measurements for lactate were available in the dataset). This pattern might explain the lower citrate levels, while the second half of the TCA cycle could be fed through glutamate (log<sub>2</sub>(fold change): 0.47, adjusted p-value: 1.99E-06; Cohen's <i>d</i>: 0.98), providing the increased malate concentration (Figure @fig:lung_vignette D) [@doi:10.1038/nrc.2016.71].
+Consistent with the original study [@doi:10.1158/1940-6207.CAPR-14-0329] and our recent re-analysis of the data [@doi:10.1093/gigascience/giz137], nucleotide metabolism was broadly up-regulated in adenocarcinomas based on the reaction pattern and perturbation network analyses. In particular, the highest-scoring reaction pattern identified by Metaboverse involved the transformation of dc-adenosyl methionine and spermidine to form spermine and 5'-methylthioadenosine. This reaction is a step in polyamine metabolism, with ties to nucleotide metabolism (Figure @fig:lung_vignette A). We also notice similar perturbations in xanthine (log<sub>2</sub>(fold change): 1.35; adjusted p-value: 1.52E-05; Cohen's <i>d</i>: 0.86) (Figure @fig:lung_vignette B) and other metabolites, which are highlighted to the user quickly in the reaction pattern and perturbation network analyses. However, as previously emphasized [@doi:10.1093/gigascience/giz137], by approaching these perturbations in a reaction-centric approach, we can identify regulatory behavior that further contextualizes the data. For example, using a more manual approach, we previously highlighted the up-regulation of glyceric acid (log<sub>2</sub>(fold change): 0.50; adjusted p-value: 1.91E-04; Cohen's <i>d</i>: 0.73) coupled with the proximal down-regulation of 3-Phosphoglyceric acid (log<sub>2</sub>(fold change): -1.09; adjusted p-value: 4.74E-04; Cohen's <i>d</i>: -0.68) which could indicate the activity of glycerate kinase [@doi:10.1093/gigascience/giz137]. This connection was missed in the original study but was highlighted by Metaboverse's reaction pattern analysis module. This sub-pathway activity is consequential as it has connections to serine metabolism that contributes to generating an ideal environment for tumorigenesis (Figure @fig:lung_vignette C). Interestingly, of the measured and significant metabolites involved in the TCA cycle, we see a moderate up-regulation of malate (log<sub>2</sub>(fold change): 0.39, adjusted p-value: 3.85E-03; Cohen's <i>d</i>: 0.56) and down-regulation of citrate (log<sub>2</sub>(fold change): -0.64, adjusted p-value: 1.20E-03; Cohen's <i>d</i>: -0.63). This pattern is consistent with the hypothesis that the TCA cycle is starved of pyruvate-derived carbons and is compensating by shunting carbon into the TCA cycle via glutaminolysis. This compensatory pathway, a feature in many cancers, consists of glutamine transport into mitochondria and its conversion to alpha-ketoglutarate. Alpha-ketoglutarate then enters the second half of the TCA cycle to generate reducing equivalents, ATP, and biosynthetic intermediates [@pmid:429309; @doi:10.1146/annurev-bioeng-071516-044546]. Pyruvate is likely shunted towards the production of lactate and other biosynthetic products (no measurements for lactate were available in the dataset). This pattern might explain the lower citrate levels, while the second half of the TCA cycle could be fed through glutamate (log<sub>2</sub>(fold change): 0.47, adjusted p-value: 1.99E-06; Cohen's <i>d</i>: 0.98), providing the increased malate concentration (Figure @fig:lung_vignette D) [@doi:10.1038/nrc.2016.71].
 
 Metaboverse simplifies the analysis process of metabolic data and allows the user more flexibility via an interactive platform that augments the identification of both canonical and novel regulatory patterns within the data. We were able to identify the regulatory pattern identified in Figure @fig:lung_vignette C previously using more manual approaches, but Metaboverse offers an automated platform for the discovery of such events not identified in the original study. We anticipate that the use of Metaboverse will enable the user to extract new and exciting hypotheses that can drive their fields forward.
 
 ![
   **Metaboverse identifies nucleotide metabolism and other signatures in lung adenocarcinoma metabolomics data.**
-  (A) Up-regulation of nucleotide metabolites. (B) Identification of xanthine regulation by both motif and perturbation analysis. (C) Regulatory activity between glyceric acid and 3-Phosphoglyceric acid identified by Metaboverse's motif analysis. (D) Disruptions of TCA metabolism support canonical disruptions during adenocarcinoma development. Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation and an increasingly red shade indicates up-regulation. Measured log<sub>2</sub>(fold change) and statistical values for each entity are displayed below the node name. A gray node indicates a reaction. A bold gray node with a purple border indicates a motif at this reaction. Non-reaction circles indicate metabolites and squares indicate proteins or protein complexes. Gray edges indicate core relationships between reaction inputs and outputs. Green edges indicate a catalyst, and red edges indicate inhibitors. Dashed blue edges point from a metabolite component to the protein complex in which it is involved. Dashed orange edges point from a protein component to the protein complex in which it is involved. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein and metabolite measurements.
+  (A) Up-regulation of nucleotide metabolites. (B) Identification of xanthine regulation by both motif and perturbation analysis. (C) Regulatory activity between glyceric acid and 3-Phosphoglyceric acid identified by Metaboverse's motif analysis. (D) Disruptions of TCA metabolism support canonical disruptions during adenocarcinoma development. Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation and an increasingly red shade indicates up-regulation. Measured log<sub>2</sub>(fold change) and statistical values for each entity are displayed below the node name. A gray node indicates a reaction. A bold gray node with a purple border indicates a motif at this reaction. Non-reaction circles indicate metabolites and squares indicate proteins or protein complexes. Gray edges indicate core relationships between reaction inputs and outputs. Green edges indicate a catalyst, and red edges indicate inhibitors. Dashed blue edges point from a metabolite component to the protein complex in which it is involved. Dashed orange edges point from a protein component to the protein complex in which it is involved. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein and metabolite measurements. Hub limit was set at 30 during generation of this network visualization.
 ](./content/figures/fig_lung.png "Tall image"){#fig:lung_vignette height=10in}
